--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -32,6 +32,7 @@ jobs:
 
     - name: Install
       run: |
+        pip install numpy
         pip install kepderiv
 
     - name: Test with pytest
