--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -33,6 +33,8 @@ jobs:
     - name: Install
       run: |
         pip install numpy
-        
 
-
+    - name: Install 2
+      run: |
+        pip install kepderiv
+  
