--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -4,10 +4,9 @@
 name: Install-Test
 
 on:
+  workflow_dispatch:
   push:
     #branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -32,5 +31,5 @@ jobs:
 
     - name: Install
       run: |
-        pip install spleaf@git+https://gitlab.unige.ch/Joao.Faria1/spleaf
+        pip install spleaf
   
